styles.css
@font-face {
    font-family: munroSmall;
    src: url("munro/MunroSmall.ttf");
    font-display: swap;
}

@font-face {
    font-family: munroNarrow;
    src: url("munro/MunroNarrow.ttf");
    font-display: swap;
}

@font-face {
    font-family: munro;
    src: url("munro/Munro.ttf");
    font-display: swap;
}

html {
    background-color: #202020;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    color: #fff;
}

h2 {
    margin: 0 0 0.2em 0;
    font-size: 3.5em;
}

h3 {
    margin: 0.2em 0 0.2em 0;
    font-size: 2em;
}

a {
    text-decoration: none;
}

a {
    color: #8446f7;
    text-decoration: none;
}

p {
    font-size: 1.5em;
}

a:hover {
    color: #f7c246;
}

body {
    width: 100%;
    margin: 0;
    font-family: munroSmall, sans-serif
}

footer {
    background-color: #000;
    text-align: center;
    padding: 5px 15px;
    font-size: 1em;
}

footer a {
    color: white;
    text-decoration: none;
}

footer a:hover {
    color: #f7c246;
}

.headerContainer {
    margin: 0;
    padding: 0;
}

#headerImage {
    content: url("./Base.png");
    image-rendering: pixelated;
}

.titleContainer {
    background-color: #000;
    cursor: pointer;
    user-select: none;
    -webkit-user-select: none;
}

.title {
    font-family: munro, sans-serif;
    text-align: center;
    margin: 0 0 -8px 0;
}

.subtitle {
    font-family: munroSmall, sans-serif;
    text-align: center;
    margin: 0;
    color: #FF0000;
}

#contentContainer {
    display: flex;
    justify-content: center;
    align-items: center;
}

#content {
    margin: 32px;
    max-width: 800px;
}

#playNow {
    margin: 0;
    background-color: #8446f7;
    cursor: pointer;
    user-select: none;
    -webkit-user-select: none;
    padding: 16px;
}

#playNow:hover {
    background-color: #f7c246;
}

#playNow p {
    margin: 0;
    text-align: center;
}

@media (min-width: 1001px) {
    .title {
        font-size: 6em;
        padding-top: 8px;
    }

    .subtitle {
        font-size: 2.3em;
        padding-bottom: 16px;
    }

    #playNow {
        font-size: 2em;
    }
}

@media (max-width: 1000px) {
    .title {
        font-size: 5em;
        padding-top: 8px;
    }

    .subtitle {
        font-size: 1.9em;
        padding-bottom: 16px;
    }

    #playNow {
        font-size: 1.5em;
    }
}

